--- a/caliber/src/main/webapp/static/app/partials/panel-report-display.html
+++ b/caliber/src/main/webapp/static/app/partials/panel-report-display.html
@@ -20,7 +20,7 @@
 						</div>
 					</i>
 					<!-- Buttons for our panel report -->
-				</div>
+				</div><!-- End Of First Panel Head -->
 				<div class="panel-body pBody">
 					<div class="row add-margin">
 						<div class="col-sm-6">
@@ -62,7 +62,6 @@
 								<div class="col-4 col-sm-6 add-space">
 									<span ng-bind="traineePanelData[panelIndex].recordingLink"></span>
 								</div>
-								<br>
 							</div>
 						</div>
 
@@ -170,11 +169,11 @@
 							</tr>
 						</tbody>
 					</table>
-				</div>
-			</div>
+				</div><!-- End Of Panel Body -->
+			</div><!-- End of Main Panel -->
 		</div>
 	</div>
-</div>
+</div><!-- Closeing container -->
 
 
 
