--- a/caliber/src/main/webapp/static/app/partials/email/emailTemplate.html
+++ b/caliber/src/main/webapp/static/app/partials/email/emailTemplate.html
@@ -1,2 +1,2 @@
 <img src="http://caliber.revature.tech/caliber/static/app/resources/images/rev-logo.jpg"/>
-<h1>Dear $TRAINER_FIRST $TRAINER_LAST, you have grades to submit!</h1>
+<h1>Dear $TRAINER_NAME, you have grades to submit!</h1>
