--- a/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
@@ -61,9 +61,9 @@
 										<td ng-if="item.status=='Repanel'"><span
 											style="color: #ff7575; width: 100%; text-align: center;"
 											class="glyphicon glyphicon-remove fa-2x"></span></td>
-										<td ng-repeat="option in item.feedback"
-											ng-if="option.status == 'Repanel'" style="text-align: center">
-											<li ng-bind="option.technology.skillCategory"><br></li>
+										<td style="text-align: center;height:auto">
+											<b><span ng-repeat="option in item.feedback"
+											ng-if="option.status == 'Repanel'" ng-bind="option.technology.skillCategory" style="display:block"></span></b>
 										</td>
 										<td ng-if="item.status!='Repanel'"><span
 											style="color: rgb(252, 221, 115); width: 100%; text-align: center;"
