--- a/caliber/src/main/webapp/static/app/partials/email/emailTemplate.html
+++ b/caliber/src/main/webapp/static/app/partials/email/emailTemplate.html
@@ -1,11 +1,3 @@
-<<<<<<< HEAD
-<img src="http://caliber.revature.tech/caliber/static/app/resources/images/rev-logo.jpg"/>
-<<<<<<< HEAD
+<img src="https://3g4d13k75x47q7v53surz1gi-wpengine.netdna-ssl.com/wp-content/themes/revature/imgs/logo.png" alt="Revature">
 <h1>Dear $TRAINER_NAME, you have grades to submit!</h1>
-=======
-<h1>Dear $TRAINER_FIRST $TRAINER_LAST, you have grades to submit!</h1>
-=======
-<img src="../../resources/images/rev-brand.png"/>
-<p>Dear $FIRST_NAME $LAST_NAME, you have missing grades, please fill them out</p>
->>>>>>> 0fdd8477038e1c613fc7a4ab8edc3488f19395cc
->>>>>>> issue736_vlad
+
