error message on panel creation failure with fade

--- a/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
@@ -33,7 +33,8 @@
 					</li>
 				</ul>
 				
-
+				<div class="alert alert-danger fade-speeder" ng-fade="true" ng-if="showMessage" ng-model="errorMessage" ng-bind="errorMessage + trainee.name"></div>
+				
 				<div class="panel panel-default" style="margin-top: 20px">
 					<div class="panel-heading">Panel Feedback</div>
 					<div class="panel-body">
