--- a/caliber/src/main/webapp/static/app/partials/email/emailTemplate.html
+++ b/caliber/src/main/webapp/static/app/partials/email/emailTemplate.html
@@ -1,3 +1,7 @@
 <img src="https://3g4d13k75x47q7v53surz1gi-wpengine.netdna-ssl.com/wp-content/themes/revature/imgs/logo.png" alt="Revature">
-<h1>Dear $TRAINER_NAME, you have grades to submit!</h1>
+<h2>Dear $TRAINER_NAME,</h2><br/> 
+
+<h3>This is an automated message informing you that there are grades missing your trainees in Caliber.</h3></br>
+<h3>Please log on to Caliber and input grades ASAP. This information is critical to providing a healthy picture of Revature.</h3></br>
+<h3>You can check your grades <ui-sref = "trainee.assess">here</ui-sref></h3>
 
