shortened highlight animation

--- a/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
@@ -5,7 +5,7 @@
 				<ul class="nav nav-tabs">
 
 					<!-- Button Trigger for Create Panel Modal -->
-					<li role="button" class="pull-right" data-toggle="modal"
+					<li role="button" class="pull-right" data-toggle="{{ trainee.name ? 'modal' : '' }}"
 						data-target="#samplemodal" ng-click=""><a>Create
 							Panel<span class="glyphicon glyphicon-plus" aria-hidden="true">
 						</span>
