--- a/caliber/src/main/webapp/static/app/partials/panel-report-display.html
+++ b/caliber/src/main/webapp/static/app/partials/panel-report-display.html
@@ -5,7 +5,7 @@
 				<div class="panel-heading clearfix" role="tab" id="headingOne">
 					Panel Interview Feedback
 					<!-- Buttons for our panel report -->
-					<i ng-click="incrementPanel()">
+					<i ng-click="panelIndex++">
 						<div style="display: inline"
 							ng-if="panelIndex < traineePanelData.length">
 							<i
@@ -13,7 +13,7 @@
 						</div>
 					</i> <span class="pull-right">Round <span
 						ng-bind="traineePanelData[panelIndex].panelRound"></span></span> <i
-						ng-click="decrementPanel()">
+						ng-click="panelIndex--">
 						<div style="display: inline" ng-if="panelIndex > 0">
 							<i
 								class="clickableIcons glyphicon glyphicon-chevron-left pull-right move-glyphicon"></i>
