--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -325,7 +325,7 @@
 										<tr>
 											<th>Trainee Name</th>
 											<th style="text-align: center;">Panel Status</th>
-											<th> Panel Date </th>
+											<th>Date</th>
 											<th style="text-align: center;">Repeat Topics</th>
 										</tr>
 										<tr ng-repeat="item in allTraineesPanelData">
