renamed paneldemo to panel and sample modal to panelmodal

--- a/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
+++ b/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
@@ -6,7 +6,7 @@
 
 					<!-- Button Trigger for Create Panel Modal -->
 					<li role="button" class="pull-right" data-toggle="{{ trainee.name ? 'modal' : '' }}"
-						data-target="#samplemodal" ng-click=""><a>Create
+						data-target="#panelmodal" ng-click=""><a>Create
 							Panel<span class="glyphicon glyphicon-plus" aria-hidden="true">
 						</span>
 					</a></li>
@@ -75,7 +75,7 @@
 						</div>
 					</div>
 				</div>
-				<div ui-view="samplemodal"></div>
+				<div ui-view="panelmodal"></div>
 			</div>
 		</div>
 	</div>
