--- a/caliber/src/main/webapp/static/app/partials/panel/panelmodal.html
+++ b/caliber/src/main/webapp/static/app/partials/panel/panelmodal.html
@@ -1,5 +1,5 @@
 <form ng-init="preventModalClose()">
-	<div id="samplemodal" class="modal fade">
+	<div id="panelmodal" class="modal fade">
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-header">
