solved week - trainee bug

--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -320,7 +320,7 @@
 							<div class="panel panel-default">
 								<div class="panel-heading">Panel Feedback</div>
 								<div class="table-responsive">
-									<table id="batch-panel-status" ng-if="weeklyProgressBatchOverallLabels" class="table"
+									<table id="batch-panel-status" ng-if="panelsBatchOverall" class="table"
 											style="border-collapse: collapse;">
 										<tr>
 											<th>Trainee Name</th>
@@ -465,26 +465,6 @@
 					</div>
 			
 				<!-- Row With Bottom 2 Charts -->
-					<div id="batchPanel" class="row">
-		
-							<div class="panel panel-default">
-								<div class="panel-heading">Panel Feedback</div>
-								<table id="batch-panel-status"
-									class="table-responsive">
-									<tr>
-										<th>Trainee Name</th>
-										<th>Panel Status</th>
-										<th>Repeat Topics</th>
-									</tr>
-									<tr ng-repeat="item in allTraineesPanelData">
-										<td ng-bind="item.trainee"></td>
-										<td ng-bind="item.status"></td>
-										<td ng-bind="item.topics"></td>
-									</tr>
-								</table>
-							</div>
-
-					</div>
 						</div>
 				<!-- Row with panel table -->
 			</div>
