--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -342,7 +342,7 @@
 											</td>
 											<td ng-if="item.status" ng-bind="item.date"></td>
 											<td ng-if="!item.status">
-												<span style="color: rgb(252,221,115); width: 100%; text-align: center;" class="fa fa-minus fa-2x"></span>
+												<span style="color: rgb(252,221,115); width: 100%;" class="fa fa-minus fa-2x"></span>
 											</td>
 											<td style = "text-align: center;" class="col-sm-3 col-md-3 col-lg-3"  ng-if="item.topics" ng-bind="item.topics"></td>
 											<td class="col-sm-3 col-md-3 col-lg-3"  ng-if="!item.topics">
