giving credit where credit is due!

--- a/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
+++ b/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
@@ -1,3 +1,7 @@
+
+<!-- @author Matt 'Spring Data' Prass -->
+<!-- @author Lauren Wallace -->
+<!-- @author Katie Bixby -->
 <div id="manage">
 	<div class="container">
 		<div class="row">
