--- a/caliber/src/main/webapp/static/app/partials/panel/panelmodal.html
+++ b/caliber/src/main/webapp/static/app/partials/panel/panelmodal.html
@@ -1,3 +1,8 @@
+
+
+<!-- @author Matt 'Spring Data' Prass -->
+<!-- @author Lauren Wallace -->
+<!-- @author Katie Bixby -->
 <form ng-init="preventModalClose()">
 	<div id="panelmodal" class="modal fade">
 		<div class="modal-dialog modal-lg">
