--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -324,38 +324,38 @@
 											style="border-collapse: collapse;">
 										<tr>
 											<th>Trainee</th>
-											<th style="text-align: center;">Panel Status</th>
+											<th class="centered-panels">Panel Status</th>
 											<th>Date</th>
 											<th>Time</th>
-											<th style="text-align: center;">Repeat Topics</th>
+											<th class="centered-panels">Repeat Topics</th>
 										</tr>
 										<tr ng-repeat="item in allTraineesPanelData">
 											<!-- Trainee column -->
 											<td class="col-sm-3 col-md-3 col-lg-3" ng-bind="item.trainee"></td>
 											<!-- Panel Status column -->
 											<td class="col-sm-2 col-md-2 col-lg-2" ng-if="item.status == 'Pass'">
-												<span style="color: #81f575; width: 100%; text-align: center;" class="fa fa-check fa-2x"> </span>
+												<span class="fa fa-check fa-2x panel-glyph"> </span>
 											</td>
 											<td class="col-sm-2 col-md-2 col-lg-2" ng-if="item.status == 'Repanel'">
-												<span style="color: #ff7575; width: 100%; text-align: center;" class="glyphicon glyphicon-remove fa-2x"></span>
+												<span class="glyphicon glyphicon-remove fa-2x panel-glyph"></span>
 											</td>
 											<td class="col-sm-2 col-md-2 col-lg-2" ng-if="!item.status">
-												<span style="color: rgb(252,221,115); width: 100%; text-align: center;" class="fa fa-minus fa-2x"></span>
+												<span class="fa fa-minus fa-2x panel-glyph"></span>
 											</td>
 											<!-- Date column -->
-											<td class="col-sm-3 col-md-3 col-lg-3" style="width: auto;" ng-if="item.status" ng-bind="item.date"></td>
-											<td class="col-sm-3 col-md-3 col-lg-3" ng-if="!item.status">
-												<span style="color: rgb(252,221,115); width: 100%; text-align: center;" class="fa fa-minus fa-2x"></span>
+											<td class="col-sm-2 col-md-2 col-lg-2" ng-if="item.status" ng-bind="item.date"></td>
+											<td class="col-sm-2 col-md-2 col-lg-2" ng-if="!item.status">
+												<span class="fa fa-minus fa-2x panel-glyph"></span>
 											</td>
 											<!-- Time column -->
-											<td class="col-sm-2 col-md-2 col-lg-2" style="width: auto; white-space:nowrap;" ng-if="item.status" ng-bind="item.time"></td>
+											<td class="col-sm-2 col-md-2 col-lg-2 no-wrap" ng-if="item.status" ng-bind="item.time"></td>
 											<td class="col-sm-2 col-md-2 col-lg-2" ng-if="!item.status">
-												<span style="color: rgb(252,221,115); width: 100%; text-align: center;" class="fa fa-minus fa-2x"></span>
+												<span class="fa fa-minus fa-2x panel-glyph"></span>
 											</td>
 											<!-- Repanel topics column -->
-											<td class="col-sm-6 col-md-6 col-lg-6" style = "text-align: center;"  ng-if="item.topics" ng-bind="item.topics"></td>
+											<td class="col-sm-6 col-md-6 col-lg-6 centered-panels"  ng-if="item.topics" ng-bind="item.topics"></td>
 											<td class="col-sm-6 col-md-6 col-lg-6" ng-if="!item.topics">
-												<span style="color: rgb(252,221,115); width: 100%; text-align: center;" class="fa fa-minus fa-2x"></span>
+												<span class="fa fa-minus fa-2x panel-glyph"></span>
 											</td>
 										</tr>
 									</table>
