--- a/caliber/src/main/webapp/static/app/resources/css/app.css
+++ b/caliber/src/main/webapp/static/app/resources/css/app.css
@@ -437,6 +437,26 @@ footer a, footer a:hover {
 .add-space{
 	margin-bottom: 5px;
 }
+.fa-check{
+	color: #81f575;
+}
+.fa-minus{
+	color: rgb(252,221,115);
+}
+/********************************************************
+	Panels table
+*********************************************************/
+.panel-glyph {
+	width: 100%;
+	text-align: center;
+}
+
+.centered-panels{
+	text-align: center;
+}
+.no-wrap{
+	white-space:nowrap;
+}
 /********************************************************
 	Overall Batch Status column in vp-home and qc-home
 *********************************************************/
