--- a/caliber/src/main/webapp/static/app/partials/home/panel-home.html
+++ b/caliber/src/main/webapp/static/app/partials/home/panel-home.html
@@ -11,4 +11,42 @@
 		</div>
 	<br />
 </div>
+<!-- Charts -->
+	<div class="container">
+	<div class="col-sm-12 col-md-12 col-lg-12">
+	<div class="row" ng-if="currentPanelsLineData">
+			<div class="col-sm-12 col-md-12 col-lg-12">
+				<div class="panel panel-default">
+
+					<div class="panel-heading">Panel Progress</div>
+					<div class="panel-body">
+						<div class="chart-container top5">
+							<canvas class="chart chart-line" chart-data="currentPanelsLineData"
+								chart-options="currentPanelsLineOptions" chart-labels="currentPanelsLineLabels"
+								chart-series="currentPanelsLineSeries" chart-colors="currentPanelsLineColors"
+								chart-dataset-override="currentPanelsDsOverride">
+							</canvas>
+						</div>
+						<table ng-if="currentPanelsLineLabels"
+									class="table table-responsive"
+									style="border-collapse: collapse;">
+									<tbody>
+										<tr>
+											<th class="col-sm-1 col-md-1 col-lg-1"></th>
+											<th class="col-sm-1 col-md-1 col-lg-1"
+												ng-repeat="label in currentPanelsLineLabels">{{label}}</th>
+										</tr>
+										<tr
+											ng-repeat="series in currentPanelsLineSeries track by $index">
+											<th class="col-sm-1 col-md-1 col-lg-1">{{series}}</th>
+											<td class="col-sm-1 col-md-1 col-lg-1"
+												ng-repeat="dataPoint in currentPanelsLineData[$index] track by $index">{{dataPoint}}</td>
+										</tr>
+									</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+</div></div>	
 <div ui-view="samplemodal"></div>
