functionalities work together

--- a/caliber/src/main/webapp/static/app/partials/qc-display.html
+++ b/caliber/src/main/webapp/static/app/partials/qc-display.html
@@ -13,13 +13,22 @@
 						</tr>
 						<tr>
 							<th>Trainee</th>
+							<th></th>
 							<th>Individual Feedback</th>
 							<th>Notes</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="trainee in currentBatch.trainees track by $index">
-							<td class="col-sm-2 col-md-2 col-lg-2">{{ trainee.name }}</td>
+							<td class="col-sm-2 col-md-2 col-lg-2" ng-click="toggleColor(trainee, $index)">{{ trainee.name }}</td>
+							<td class="col-sm-1 col-md-1 col-lg-1"><span ng-init="init(trainee, $index)" class="glyphicon glyphicon-flag"></span>
+							<form class="commentForm" ng-submit="updateFlag(trainee)"
+										style="display: none;">
+										<input type="text" placeholder="comment" name="statusComment"
+											ng-model="trainee.flagNotes"> <input type="submit"
+											value="Save"> <span ng-click="closeComment()"
+											class="glyphicon glyphicon-remove-sign"></span>
+									</form></td>
 							<td>{{faces[$index].qcStatus ? faces[$index].qcStatus :
 								"-"}}</td>
 							<td class="col-sm-9 col-md-9 col-lg-9">{{faces[$index].content
