--- a/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
@@ -46,6 +46,7 @@
 							<thead>
 								<tr>
 									<th>Trainee Name</th>
+									<th></th>
 									<th>Trainee Email</th>
 									<th>Training Status</th>
 									<th>Phone Number</th>
@@ -63,7 +64,15 @@
 							</thead>
 							<tbody>
 								<tr ng-repeat="trainee in trainees">
-									<td>{{trainee.name}}</td>
+									<td ng-click="toggleColor(trainee, $index)">{{trainee.name}}</td>
+									<td><span ng-init="init(trainee, $index)" class="glyphicon glyphicon-flag"></span>
+									<form class="commentForm" ng-submit="updateFlag(trainee)"
+										style="display: none;">
+										<input type="text" placeholder="comment" name="statusComment"
+											ng-model="trainee.flagNotes"> <input type="submit"
+											value="Save"> <span ng-click="closeComment()"
+											class="glyphicon glyphicon-remove-sign"></span>
+									</form></td>
 									<td>{{trainee.email}}</td>
 									<td>{{trainee.trainingStatus}}</td>
 									<td>{{trainee.phoneNumber}}</td>
