flags functional across all three pages

--- a/caliber/src/main/webapp/static/app/partials/assess/qc-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/qc-assess.html
@@ -77,9 +77,9 @@
 						<tbody>
 							<!-- Displays a list of all trainees still active in the batch -->
 							<tr ng-repeat="trainee in currentBatch.trainees track by $index">
-								<td ng-click="toggleColor(trainee, $index)">{{ trainee.name }}</td>
-								<td><span ng-init="init(trainee, $index)" class="glyphicon glyphicon-flag"></span>
-								<form class="commentForm" ng-submit="updateFlag(trainee)"
+								<td ng-click="toggleColor(trainee, $index)">{{trainee.name}}</td>
+									<td><span ng-init="init(trainee, $index)" class="glyphicon glyphicon-flag"></span>
+									<form class="commentForm" ng-submit="updateFlag(trainee, $index)"
 										style="display: none;">
 										<input type="text" placeholder="comment" name="statusComment"
 											ng-model="trainee.flagNotes"> <input type="submit"
