--- a/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
@@ -66,7 +66,7 @@
 								<tr ng-repeat="trainee in trainees">
 									<td ng-click="toggleColor(trainee, $index)">{{trainee.name}}</td>
 									<td><span ng-init="init(trainee, $index)" class="glyphicon glyphicon-flag"></span>
-									<form class="commentForm" ng-submit="updateFlag(trainee)"
+									<form class="commentForm" ng-submit="updateFlag(trainee, $index)"
 										style="display: none;">
 										<input type="text" placeholder="comment" name="statusComment"
 											ng-model="trainee.flagNotes"> <input type="submit"
