--- a/caliber/src/main/webapp/static/app/partials/trainers/manage-trainers.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/manage-trainers.html
@@ -37,6 +37,10 @@
 							<!-- Buttons -->
 							<td><a role="button" class="pull-right"
 								ng-click="populateTrainer($index)" data-toggle="modal"
+								data-target="#deleteTrainerModal"><span
+									ng-class="{'glyphicon glyphicon-list-alt' : trainer.tier.substr(5) == 'TRAINER'}" aria-hidden="true"></span></a></td>
+							<td><a role="button" class="pull-right"
+								ng-click="populateTrainer($index)" data-toggle="modal"
 								data-target="#editTrainerModal"><span
 									class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 							<td><a role="button" class="pull-right"
