getAllActiveTasks() method works

--- a/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
@@ -23,8 +23,8 @@
 										</tr>
 									</thead>
 									<tbody>
-										<tr ng-repeat="trainer in allTrainer track by $index">
-											<td>{{trainer.name}}</td>
+										<tr ng-repeat="task in allActiveTasks track by $index">
+											<td>{{task.description}}</td>
 											<td><input type="checkbox"></td>
 										</tr>
 									</tbody>
