--- a/caliber/src/main/webapp/static/app/partials/abstracts/staging.html
+++ b/caliber/src/main/webapp/static/app/partials/abstracts/staging.html
@@ -10,6 +10,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li><a ui-sref="staging.home">Home</a></li>
+			<li><a ui-sref="staging.manage">Manage Batch</a></li>
             <li><a ui-sref="staging.reports">Reports</a></li>
         </ul>
     </div>
