--- a/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
@@ -26,7 +26,15 @@
 										<tr ng-repeat="task in allActiveTasks track by $index">
 											<td>{{task.description}}</td>
 											<td><input type="checkbox"></td>
-										</tr>
+											<td><a role="button" class="pull-right"
+												ng-click="populateTrainer($index)" data-toggle="modal"
+												data-target="#editTrainerModal"><span
+													class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
+											<td><a role="button" class="pull-right"
+												ng-click="populateTrainer($index)" data-toggle="modal"
+												data-target="#deleteTrainerModal"><span
+													class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
+														</tr>
 									</tbody>
 				
 								</table>
