hover for flagNotes

--- a/caliber/src/main/webapp/static/app/partials/assess/qc-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/qc-assess.html
@@ -78,14 +78,19 @@
 							<!-- Displays a list of all trainees still active in the batch -->
 							<tr ng-repeat="trainee in currentBatch.trainees track by $index">
 								<td ng-click="toggleColor(trainee, $index)">{{trainee.name}}</td>
-									<td><span ng-init="init(trainee, $index)" class="glyphicon glyphicon-flag"></span>
+									<td><span ng-mouseover="showNotes($index)" ng-mouseleave="hideNotes($index)" 
+									ng-init="init(trainee, $index)" class="glyphicon glyphicon-flag"></span>
 									<form class="commentForm" ng-submit="updateFlag(trainee, $index)"
 										style="display: none;">
 										<input type="text" placeholder="comment" name="statusComment"
 											ng-model="trainee.flagNotes"> <input type="submit"
 											value="Save"> <span ng-click="closeComment()"
 											class="glyphicon glyphicon-remove-sign"></span>
-									</form></td>
+									</form>
+									<div style="display:none" class="notes">
+ 										<span>{{trainee.flagNotes}}</span>
+ 									</div>
+									</td>
 								<!-- Icons: question mark in circle by default. 
 								  		Otherwise shows the status type (icons) -->
 								<td><button ng-hide="faces[$index].qcStatus"
