--- a/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
@@ -65,14 +65,19 @@
 							<tbody>
 								<tr ng-repeat="trainee in trainees">
 									<td ng-click="toggleColor(trainee, $index)">{{trainee.name}}</td>
-									<td><span ng-init="init(trainee, $index)" class="glyphicon glyphicon-flag"></span>
+									<td><span ng-mouseover="showNotes($index)" ng-mouseleave="hideNotes($index)"
+ 									ng-init="init(trainee, $index)" class="glyphicon glyphicon-flag"></span>
 									<form class="commentForm" ng-submit="updateFlag(trainee, $index)"
 										style="display: none;">
 										<input type="text" placeholder="comment" name="statusComment"
 											ng-model="trainee.flagNotes"> <input type="submit"
 											value="Save"> <span ng-click="closeComment()"
 											class="glyphicon glyphicon-remove-sign"></span>
-									</form></td>
+									</form>
+									<div style="display:none" class="notes">
+ 										<span>{{trainee.flagNotes}}</span>
+ 									</div>
+									</td>
 									<td>{{trainee.email}}</td>
 									<td>{{trainee.trainingStatus}}</td>
 									<td>{{trainee.phoneNumber}}</td>
