--- a/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
@@ -23,38 +23,6 @@
 						</li>
 					</ul>
 					<!-- Checklist -->
-<<<<<<< HEAD
-						<div class="row">
-							<div class="col-sm-12 col-md-12 col-lg-12">
-								<table class="table table-hover">
-									<thead>
-										<tr>
-											<th>Task Description</th>
-										</tr>
-									</thead>
-									<tbody>
-										<tr ng-repeat="task in allActiveTasks track by $index">
-											<td class="col-sm-9 col-md-9 col-lg-9"><span ng-hide="isHidden">{{task.description}}</span>
-												<div id="description" class="form-group col-sm-7 col-md-7 col-lg-7 ng-hide" style="position: absolute; z-index: 1; margin-top: -4px">
-													<input class="form-control input-sm" type="text" ng-model="task.description">
-												</div>
-											</td>
-											<td id="taskEdit" class="col-sm-2 col-md-2 col-lg-2 ng-hide"><input type="submit" ng-value="SaveTaskEdit" class="btn btn-default btn-xs"></td>
-											<td class="col-sm-1 col-md-1 col-lg-1"><input type="checkbox"></td>
-											<td class="col-sm-1 col-md-1 col-lg-1"><a role="button" class="pull-right"
-												ng-click="editTask($index)"><span
-													class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-											<td class="col-sm-1 col-md-1 col-lg-1"><a role="button" class="pull-right"
-												ng-click="populateTrainer($index)" data-toggle="modal"
-												data-target="#deleteTrainerModal"><span
-													class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
-														</tr>
-									</tbody>
-				
-								</table>
-				
-							</div>
-=======
 					<div class="row">
 						<div class="col-sm-12 col-md-12 col-lg-12">
 							<table class="table table-hover">
@@ -65,19 +33,38 @@
 								</thead>
 								<tbody>
 									<tr ng-repeat="task in allActiveTasks track by $index">
-										<td>{{task.description}}</td>
-										<td><input type="checkbox"></td>
-										<td><a role="button" class="pull-right"
-											ng-click="populateTrainer($index)" data-toggle="modal"
-											data-target="#editTrainerModal"><span
+										<td class="col-sm-7 col-md-7 col-lg-7 oldDesc"><span ng-show="task.isShown">{{task.description}}</span>
+											<span class="form-group">
+								                <input ng-hide="task.isHidden" class="form-control input-sm newDesc" type="text" ng-model="task.description">
+								            </span>
+								            <br>
+								            <span class="form-group priority" ng-hide="task.isHidden">
+								            	Task Priority: <select
+												ng-model="newPriority">
+												<option value="1">1 (high)</option>
+												<option value="2">2</option>
+												<option value="3">3</option>
+												<option value="4">4</option>
+												<option value="5" ng-selected="true">5 (low)</option>
+												</select>
+								            </span>
+								        </td>
+								        <td class="col-sm-2 col-md-2 col-lg-2 taskEdit" ng-hide="task.isHidden">
+								        <input type="submit" ng-click="submitEdit($index, taskDesc, newPriority)" class="btn btn-default btn-xs">
+								        <span ng-click="closeEditTask($index)"
+											class="glyphicon glyphicon-remove-sign"></span>
+								        </td>
+										<td class="col-sm-1 col-md-1 col-lg-1"><input type="checkbox"></td>
+										<td class="col-sm-1 col-md-1 col-lg-1"><a role="button" class="pull-right"
+											ng-click="editTask($index)"><span
 												class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-										<td><a role="button" class="pull-right"
+										<td class="col-sm-1 col-md-1 col-lg-1"><a role="button" class="pull-right"
 											ng-click="populateTrainer($index)" data-toggle="modal"
 											data-target="#deleteTrainerModal"><span
 												class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
 									</tr>
 									<tr ng-show="addTask">
-										<td>Task: <input type="text" ng-model="taskDesc"
+										<td class="col-sm-9 col-md-9 col-lg-5">Task: <input type="text" ng-model="taskDesc"
 											placeholder="Specify Task"> Task Priority: <select
 											ng-model="priorityLevel">
 												<option value="1">1 (high)</option>
@@ -95,8 +82,6 @@
 								</tbody>
 
 							</table>
-
->>>>>>> 2adf067fc3859060f2cd16d80c5da85c926c7982
 						</div>
 					</div>
 				</div>
