edit task works

--- a/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
@@ -41,16 +41,16 @@
 								            <span class="form-group priority" ng-hide="task.isHidden">
 								            	Task Priority: <select
 												ng-model="newPriority">
-												<option value="1">1 (high)</option>
-												<option value="2">2</option>
-												<option value="3">3</option>
-												<option value="4">4</option>
-												<option value="5" ng-selected="true">5 (low)</option>
+												<option value="1" ng-selected="task.priority == 1">1 (high)</option>
+												<option value="2" ng-selected="task.priority == 2">2</option>
+												<option value="3" ng-selected="task.priority == 3">3</option>
+												<option value="4" ng-selected="task.priority == 4">4</option>
+												<option value="5" ng-selected="task.priority == 5">5 (low)</option>
 												</select>
 								            </span>
 								        </td>
 								        <td class="col-sm-2 col-md-2 col-lg-2 taskEdit" ng-hide="task.isHidden">
-								        <input type="submit" ng-click="submitEdit($index, taskDesc, newPriority)" class="btn btn-default btn-xs">
+								        <input type="submit" ng-click="submitEdit($index, task.description, newPriority)" class="btn btn-default btn-xs">
 								        <span ng-click="closeEditTask($index)"
 											class="glyphicon glyphicon-remove-sign"></span>
 								        </td>
