--- a/caliber/src/main/webapp/static/app/partials/trainers/manage-trainers.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/manage-trainers.html
@@ -38,7 +38,7 @@
 							<td><a role="button" class="pull-right"
 								ng-click="populateTrainer($index)" data-toggle="modal"
 								data-target="#trainerTaskModal"><span
-									ng-class="{'glyphicon glyphicon-list-alt' : trainer.tier.substr(5) == 'TRAINER'}" aria-hidden="true"></span></a></td>
+									ng-class="{'glyphicon glyphicon-list-alt' : trainer.title == 'Trainer in Training'}" aria-hidden="true"></span></a></td>
 							<td><a role="button" class="pull-right"
 								ng-click="populateTrainer($index)" data-toggle="modal"
 								data-target="#editTrainerModal"><span
