--- a/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
@@ -1,5 +1,5 @@
 <!--********************************************* Trainer Checklist Modal ************************************-->
-<form ng-init="loadAllTasks()">
+<form>
 	<div class="modal fade" id="trainerTaskModal" tabindex="-1"
 		role="dialog" aria-labelledby="trainerModalLabel">
 		<div class="modal-dialog" role="document">
