--- a/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/trainer-checklist-modal.html
@@ -54,7 +54,7 @@
 								        <span ng-click="closeEditTask($index)"
 											class="glyphicon glyphicon-remove-sign"></span>
 								        </td>
-										<td><input type="checkbox" ng-click="addToCheck(task.id)"></td>
+										<td><input type="checkbox" ng-model="task.isChecked" ng-click="addToCheck(task.id)"></td>
 										<td class="col-sm-1 col-md-1 col-lg-1"><a role="button" class="pull-right"
 											ng-click="editTask($index)"><span
 												class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
@@ -87,7 +87,7 @@
 				</div>
 				<div class="modal-footer">
 					<button ng-click="checkOff(trainerForm)" class="btn btn-primary" data-dismiss="modal">Save</button>
-					<button type="button" class="btn btn-default" ng-click="reset()" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
