--- a/caliber/src/main/webapp/static/app/partials/trainers/deactivate-task-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/deactivate-task-modal.html
@@ -19,7 +19,7 @@
 				<div class="modal-footer">
 				<!-- PLAY WITH THE $INDEX THING!!! (NG-ONCLICK) -->
 					<input type="submit" ng-click="deactivateTask(task)" value="Deactivate"
-						class="btn btn-lg btn-danger">
+						class="btn btn-lg btn-danger" data-dismiss="modal">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 				</div>
 			</div>
