modified deactivate confirmation to warn of global deactivation

--- a/caliber/src/main/webapp/static/app/partials/trainers/deactivate-task-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/deactivate-task-modal.html
@@ -14,6 +14,7 @@
 				</div>
 				<div class="modal-body">
 					<h3>Are you sure you want to deactivate this task: <br><br> "{{task.description}}" ?</h3>
+					<br> <h4 class="warning">Deactivating this task will deactivate it for all trainers.</h4>
 					<br />
 				</div>
 				<div class="modal-footer">
