--- a/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
+++ b/caliber/src/main/webapp/static/app/partials/panel/panelhome.html
@@ -29,7 +29,7 @@
 									class="form-control SearchPad" autocomplete="off" />
 								<datalist id="traineeList">
 									<option ng-repeat="trainee in employedTrainees track by $index"
-										ng-value="trainee.name">
+										ng-value="trainee.name" ng-if="chosenTrainee.length>0">
 	    								{{trainee.name}} | {{trainee.email}} | {{trainee.skypeId}} 
 	    							</option>
 								</datalist>
